# thClaws

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SETUP.md
.github/: CODEOWNERS
.github/workflows/: cargo-audit.yml  ci.yml  codeql-rust.yml
crates/core/: Cargo.toml  build.rs
crates/core/resources/: marketplace.json  model_catalogue.json
crates/core/resources/pptx/: template-light.pptx
crates/core/src/: agent.rs  cli_completer.rs  compaction.rs  config.rs  context.rs  event_render.rs  external_url.rs  file_preview.rs  goal_state.rs  gui.rs  instructions.rs  ipc.rs  kms.rs  lib.rs  marketplace.rs  mcp.rs  model_catalogue.rs  oauth.rs  permissions.rs  plugins.rs  prompts.rs  recent_dirs.rs  repl.rs  sandbox.rs  secrets.rs  server.rs  session.rs  shared_session.rs  shell_bang.rs  shell_dispatch.rs  skills.rs  theme.rs  types.rs  util.rs
crates/core/src/default_prompts/: goal_budget_limit.md  system.md
crates/core/src/providers/: anthropic.rs  assemble.rs  gemini.rs  mod.rs  ollama.rs  ollama_cloud.rs  openai.rs  openai_responses.rs
crates/core/src/sso/: mod.rs
crates/core/src/tools/: ask.rs  bash.rs  docx_create.rs  docx_edit.rs  docx_read.rs  glob.rs  kms.rs  mod.rs  pdf_create.rs  pdf_read.rs  plan.rs  plan_state.rs  pptx_create.rs  pptx_edit.rs  pptx_read.rs  todo.rs  update_goal.rs  xlsx_create.rs  xlsx_edit.rs  xlsx_read.rs
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  global.d.ts  index.css  main.tsx
frontend/src/components/: ChatView.tsx  CodeEditor.tsx  FilesView.tsx  InstructionsEditorModal.tsx  MarkdownEditor.tsx  McpAppIframe.tsx  ModelPickerDropdown.tsx  PlanSidebar.tsx  SettingsMenu.tsx  SettingsModal.tsx  Sidebar.tsx  SlashCommandPopup.tsx  TeamView.tsx  TerminalView.tsx  ThemeProvider.tsx
frontend/src/hooks/: useIPC.ts  useTheme.tsx
scripts/: build.ps1  build.sh  install-one.ps1  install-one.sh
user-manual/: ch02-installation.md  ch04-desktop-gui-tour.md  ch06-providers-models-api-keys.md  ch10-slash-commands.md  ch11-built-in-tools.md  ch12-skills.md  ch14-mcp.md  ch16-plugins.md  ch18-plan-mode.md
user-manual-th/: ch02-installation.md  ch04-desktop-gui-tour.md  ch06-providers-models-api-keys.md  ch10-slash-commands.md  ch11-built-in-tools.md  ch12-skills.md  ch14-mcp.md  ch16-plugins.md  ch18-plan-mode.md
