[package]
name = "thclaws-core"
version = "0.2.2"
edition = "2021"
description = "thClaws — native Rust AI agent workspace with CLI and desktop GUI."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "process", "io-util", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
bytes = "1"
ignore = "0.4"
regex = "1"
globset = "0.4"
rustyline = "14"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
sha2 = "0.10"
getrandom = "0.2"
url = "2"
urlencoding = "2"
fs2 = "0.4"
uuid = { version = "1", features = ["v4"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
arboard = "3"
tao = { version = "0.34", optional = true }
wry = { version = "0.54", optional = true }
# Markdown → HTML for the Files-tab preview. GFM tables, strikethrough,
# task lists, autolinks. `unsafe_ = false` strips raw HTML (incl. scripts)
# before we hand it to the sandboxed iframe.
comrak = { version = "0.29", default-features = false, optional = true }
rfd = { version = "0.17.2", optional = true }
native-dialog = { version = "0.9.6", optional = true }

[features]
default = []
gui = ["dep:tao", "dep:wry", "dep:comrak", "dep:rfd", "dep:native-dialog"]

[[bin]]
name = "thclaws-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "thclaws"
path = "src/bin/app.rs"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
